# generate

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
examples/: advanced_usage.ipynb  readme.md  tutorial.ipynb
generate/: __init__.py  access_token_manager.py  chat_engine.py  completion_engine.py  constant.py  function.py  highlevel.py  http.py  iterchain.py  limit.py  model.py  parameters.py  printer.py  test.py  token.py  types.py  ui.py  utils.py  version.py
generate/chat_completion/: __init__.py  base.py  cost_caculator.py  function_call.py  http_chat.py  model_output.py  printer.py  stream_manager.py  tool.py
generate/chat_completion/message/: __init__.py  converter.py  core.py  exception.py  utils.py
generate/chat_completion/models/: __init__.py  anthropic.py  azure.py  baichuan.py  bailian.py  dashscope.py  dashscope_multimodal.py  deepseek.py  hunyuan.py  minimax.py  minimax_legacy.py  minimax_pro.py  moonshot.py  openai.py  openai_like.py  openrouter.py  stepfun.py  test.py  wenxin.py  yi.py  zhipu.py
generate/examples/: highlevel_examples.py
generate/image_generation/: __init__.py  base.py  model_output.py
generate/image_generation/models/: __init__.py  baidu.py  openai.py  qianfan.py  zhipu.py
generate/modifiers/: agent.py  cache.py  hook.py  limit.py  session.py  structure.py
generate/settings/: __init__.py  azure.py  baichuan.py  baidu.py  minimax.py  wenxin.py
generate/text_to_speech/: __init__.py  base.py  http_speech.py  model_output.py
generate/text_to_speech/models/: __init__.py  minimax.py  openai.py
search/: search_index.json
tests/: test_chat_completion_model.py  test_completion.py  test_function.py  test_highlevel.py  test_image_completion.py  test_message.py  test_modifiers.py  test_moonshot.py  test_parameters.py  test_text_to_speech_model.py  test_utils.py
